--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .idea
 node_modules
 /node_modules
-/workspace.xml
+/.idea/workspace.xml
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
